--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightshot-gallery-downloader-cli",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "A small Node.JS program to download your LightShot(Prntscr.com) Gallery",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/Wipie/LightShotGalleryDownloader-CLI#readme",
   "dependencies": {
+    "cli-progress": "^3.8.2",
+    "colors": "^1.4.0",
     "fs": "0.0.1-security",
     "request": "^2.88.2"
   }
